# rust-newsletter

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  spec.yaml
.github/workflows/: general.yaml
.sqlx/: query-3058856267d02555bc34888cd2f781548de664c109e4385ee3fb84d578f89367.json  query-3a3ccb70115e829822672879b36557ccb335779bf41522407db6382d6355ec12.json  query-494ee0306ea6819d0e76f19b7e62b4619eab8757c2922e493c72ccab9436defc.json  query-4a1968805855a4988181c8e9c0abe629ed8bf2087b16677a4d1f4741e745f438.json  query-506c22dd73662d5104e153f4ce067bf5156004b0a6e32f84020bbee4207ccc69.json  query-7173adb81ba74d9bad2168af300c3f2bc11472a1bbea501de644863c755861ac.json  query-80d7c9bb91f28f309c199ee6a86549efb10a086c3c5ddc4dfa8f2e96ddfe59e5.json  query-9dfb62f69c2b8099c8a7b59b2ba9d1b1387bc1778f3a72276a8d4d4808a59574.json  query-9ebce18a2ed31835dcb2e5192e3873593a6908ef62b4aa67247aacf7f08a4109.json  query-9fedafcc35442382531cb758a5c36634781395e878f7f9b636c1fef747ed616f.json  query-c10f2b127e05dd7d7115a7b576fa852501c65f9c27027b7d9e61b5ed7a6d96b9.json  query-cf1b6c60920d8b6f65d142020923e57df5fd8f6ed96e02250c3407d4298ffe6a.json  query-e8d983827d84d1aa22fce7d7eb91d16f14f67c68ebbd053e4ae291f61ebce34d.json  query-e97e749b9138c9f26864c61a0cb28fe02fcebbb700c9e551b439bb1a22b19610.json
migrations/: 20250912081945_make_status_not_null_in_subscriptions.sql  20250912082147_create_subscription_tokens_table.sql  20250916070842_seed_user.sql  20250917080847_create_idempotency_table.sql  20250918054315_create_issue_delivery_queue_table.sql
scripts/: init_db.sh  init_redis.sh
src/: authentication.rs  configuration.rs  email_client.rs  issue_delivery_worker.rs  main.rs  session_state.rs  startup.rs  telemetry.rs  utils.rs
src/authentication/: middleware.rs  password.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/idempotency/: key.rs  mod.rs  persistence.rs
src/routes/: newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
src/routes/admin/: dashboard.rs
src/routes/admin/newsletter/: get.rs  post.rs
src/routes/admin/password/: get.rs  post.rs
src/routes/login/: get.rs  post.rs
tests/: health_check.rs
tests/api/: change_password.rs  helpers.rs  login.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
