[package]
name = "newsletter"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "newsletter"

[dependencies]
config = "0.14"
actix-web = "4"
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3"
tracing-log = "0.2"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"]}
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4.22", default-features = false, features = ["clock"] }
secrecy = { version = "0.8", features = ["serde"] }
tracing-actix-web = "0.7"
serde-aux = "4"
unicode-segmentation = "1"
claims = "0.7"
validator = "0.18"
rand = { version = "0.8", features = ["std_rng"] }
thiserror = "1"
anyhow = "1"
base64 = "0.22"
argon2 = { version = "0.5", features = ["std"] }
urlencoding = "2"
htmlescape = "0.3"
hmac = { version = "0.12", features = ["std"] }
sha2 = "0.10"
hex = "0.4"
actix-web-flash-messages = { version = "0.5", features = ["cookies"] }
actix-session = { version = "0.10", features = ["redis-session-rustls"] }
serde_json = "1"

[dependencies.sqlx]
version = "0.8"
default-features = false
features = [
  "runtime-tokio-rustls",
  "macros",
  "postgres",
  "uuid",
  "chrono",
  "migrate"
]

[dependencies.reqwest]
version = "0.12"
default-features = false
features = ["json", "rustls-tls", "cookies"]

[dev-dependencies]
fake = "2.9"
quickcheck = "1.0.3"
quickcheck_macros = "1"
tokio = { version = "1", features = ["rt", "macros"] }
wiremock = "0.6"
linkify = "0.10"

[target.x86_64-pc-windows-msvc]
rustflags = ["-C", "link-arg=-fuse-ld=lld"]
